# my-arithmetic-mhacala

./: .gitignore  .gitlab-ci.yml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: deploy.yml  dev.yml  test.yml
src/my_arithmetic_mhacala/: __about__.py  pgcd.py
tests/: __init__.py  test_pgcd.py
