[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "my-arithmetic-mhacala"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "mhacala", email = "maude.hacala@etudiant.univ-lr.fr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/mhacala/my-arithmetic-mhacala#readme"
Issues = "https://github.com/mhacala/my-arithmetic-mhacala/issues"
Source = "https://github.com/mhacala/my-arithmetic-mhacala"

[tool.hatch.version]
path = "src/my_arithmetic_mhacala/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/my_arithmetic_mhacala tests}"

[tool.coverage.run]
source_pkgs = ["my_arithmetic_mhacala", "tests"]
branch = true
parallel = true
omit = [
  "src/my_arithmetic_mhacala/__about__.py",
]

[tool.coverage.paths]
my_arithmetic_mhacala = ["src/my_arithmetic_mhacala", "*/my-arithmetic-mhacala/src/my_arithmetic_mhacala"]
tests = ["tests", "*/my-arithmetic-mhacala/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
